# KryoX

./: CMakeLists.txt  README.md
examples/: memo_test.loc  t01_basic.loc  t02_matrix_negative.loc  t03_compose_scalar.loc  t04_precedence.loc  t05_dce.loc  t06_const_fold.loc  t07_noncommutative.loc  t08_shape_mismatch.loc  t09_cache.loc  test.loc
include/loc/frontend/: ast.hpp
include/loc/ir/: graph.hpp  lower.hpp  pass_manager.hpp
include/loc/ir/passes/: const_fold.hpp  dce.hpp
include/loc/passes/: resolve_prints.hpp  simplify.hpp
include/loc/runtime/: executor.hpp  matrix.hpp  registry.hpp
src/: main.cpp
src/frontend/: lexer.l  parser.y
src/ir/: const_fold.cpp  dce.cpp  graph.cpp
src/ir/passes/: dce.cpp
src/passes/: resolve_prints.cpp  simplify.cpp
src/runtime/: executor.cpp  matrix.cpp  registry.cpp
tests/: runner.py
